--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <script src="app.js"></script>
     <script src="js/productController.js"></script>
     <script src="js/productService.js"></script>
-    
+
 
 
     <!-- add i18n script -->
@@ -29,6 +29,9 @@
     <script src="bower_components/angular-translate-loader-url/angular-translate-loader-url.js"></script>
     <script src="js/languageServices.js"></script>
     <script src="js/languageControllers.js"></script>
+
+    <script src="js/shoppingCartControllers.js"></script>
+    <script src="js/shoppingCartService.js"></script>
 
 
 </head>
@@ -41,12 +44,12 @@
 </div>
 <div class="navbar navbar-default" ng-controller="languageController">
     <div class="container-fluid">
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li ng-class="{'active':currentLocale== 'en'}"><a href="" ng-click="changeLanguage('en')">EN </a></li>
-                    <li ng-class="{'active':currentLocale== 'fr'}"><a href="" ng-click="changeLanguage('fr')">FR</a></li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li ng-class="{'active':currentLocale== 'en'}"><a href="" ng-click="changeLanguage('en')">EN </a></li>
+                <li ng-class="{'active':currentLocale== 'fr'}"><a href="" ng-click="changeLanguage('fr')">FR</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 
